Coordinate async schema candidate validation